front: localization done and implemented in all pages

--- a/new-frontend/translations/en.json
+++ b/new-frontend/translations/en.json
@@ -1,21 +1,443 @@
 {
     "common": {
-      "field": "Field"
+        "field": "Field",
+        "save": "Save",
+        "cancel": "Cancel",
+        "create": "Create",
+        "name": "Name",
+        "description": "Description",
+        "optional": "optional"
     },
     "dashboard": {
-      "aiSummary": "AI Summary",
-      "generatingSummary": "Generating summary...",
-      "noSummaryAvailable": "No summary available.",
-      "regenerateInsight": "Regenerate insight",
-      "taskCompletion": "Task Completion",
-      "completed": "Completed",
-      "notDone": "Not done",
-      "totalFieldArea": "Total Field Area",
-      "tasksTimeline": "Tasks timeline",
-      "task": "Task",
-      "status": "Status",
-      "date": "Date",
-      "due": "Due",
-      "view": "View"
+        "aiSummary": "AI Summary",
+        "generatingSummary": "Generating summary...",
+        "noSummaryAvailable": "No summary available.",
+        "regenerateInsight": "Regenerate insight",
+        "taskCompletion": "Task Completion",
+        "completed": "Completed",
+        "notDone": "Not done",
+        "totalFieldArea": "Total Field Area",
+        "tasksTimeline": "Tasks timeline",
+        "task": "Task",
+        "status": "Status",
+        "date": "Date",
+        "due": "Due",
+        "view": "View"
+    },
+    "roles": {
+        "title": "Roles & Permissions",
+        "selectRole": "Select a role",
+        "noOtherRolesAvailable": "No other roles available",
+        "permissionsForRole": "Permissions for",
+        "owner": "Owner",
+        "member": "Member",
+        "updateRole": "Save Role",
+        "noPermission": "You do not have permission to view roles and permissions."
+    },
+    "equipment": {
+        "title": "Create Equipment",
+        "equipmentName": "Equipment Name",
+        "enterEquipmentName": "Enter equipment name",
+        "selectEquipmentType": "Select Equipment Type",
+        "selectType": "Select equipment type",
+        "description": "Description",
+        "enterDescription": "Enter equipment description",
+        "createButton": "Create Equipment",
+        "noPermission": "You do not have permission to create equipment on this farm.",
+        
+        "myEquipment": "My Equipment",
+        "searchPlaceholder": "Search by name...",
+        "filterByType": "Filter by Type",
+        "createEquipment": "Create Equipment",
+        "type": "Type",
+        "actions": "Actions",
+        "confirmDelete": "Confirm Delete",
+        "delete": "Delete",
+        "deleteConfirmation": "Are you sure you want to delete ",
+        "showAll": "Show All",
+        "fetchError": "Failed to fetch equipment.",
+        "fetchTypesError": "Failed to fetch equipment types.",
+        "updateSuccess": "Equipment updated successfully.",
+        "updateError": "Failed to update equipment.",
+        "deleteSuccess": "Deleted equipment: {name}",
+        "deleteError": "Failed to delete equipment.",
+        "unknown": "Unknown",
+        "noPermissionView": "You do not have permission to view equipment."
+    },
+    "fields": {
+        "title": "Create a Field",
+        "fieldName": "Field Name",
+        "enterFieldName": "Enter field name",
+        "selectCrop": "Select Crop",
+        "selectCropType": "Select a crop",
+        "drawBoundary": "Draw Field Boundary",
+        "area": "Area",
+        "perimeter": "Perimeter",
+        "createButton": "Create Field",
+        "noPermission": "You do not have permission to create fields.",
+        "ha": "ha",
+        "m": "m",
+        "fieldLoadError": "Failed to load field data.",
+        "fieldNotFound": "Field not found.",
+        "fieldLocation": "Field Location",
+        "deleteField": "Delete Field",
+        "deleteFieldConfirm": "Are you sure you want to delete this field?",
+        "deleteFieldSuccess": "Field deleted successfully.",
+        "deleteFieldError": "Failed to delete field.",
+        "myFields": "My Fields",
+        "searchPlaceholder": "Search fields by name",
+        "fetchFieldsError": "Failed to fetch fields.",
+        "moreInfo": "More Info"
+    },
+    "tasks": {
+        "title": "Create a Task",
+        "taskType": "Task Type",
+        "selectTaskType": "Select Task Type",
+        "description": "Description",
+        "taskStatus": "Task Status",
+        "selectTaskStatus": "Select Task Status",
+        "field": "Field",
+        "selectField": "Select Field",
+        "season": "Season",
+        "allSeasons": "All seasons",
+        "date": "Date",
+        "dueDate": "Due Date",
+        "completedDate": "Completed Date",
+        "selectEquipment": "Select Equipment",
+        "recommendedDate": "Recommended date for this task",
+        "useRecommendedDate": "Use recommended date",
+        "createTask": "Create Task",
+        "noPermission": "You do not have permission to create tasks.",
+        "startRecording": "Start recording",
+        "stopRecording": "Stop recording",
+        "processingVoice": "Processing voice input...",
+        "noTasksAvailable": "No tasks available.",
+        "fetchTasksError": "Failed to fetch tasks.",
+        "fetchSeasonsError": "Failed to load seasons.",
+        "viewTask": "View Task",
+        "taskStatusPending": "Pending",
+        "taskStatusCompleted": "Completed",
+        "taskStatusCanceled": "Cancel",
+        "all": "All"
+    },
+    "cropHealth": {
+        "title": "Crop Health Diagnosis (AI)",
+        "subtitle": "Upload a photo of your plant or crop and get AI-powered disease insights.",
+        "chooseCropImage": "Choose Crop Image",
+        "analyze": "Analyze",
+        "diagnosisReport": "Diagnosis Report",
+        "plantDetected": "Plant Detected",
+        "healthStatus": "Health Status",
+        "detectedDiseases": "Detected Diseases",
+        "disease": "Disease",
+        "probability": "Probability",
+        "similarImages": "Similar Images",
+        "action": "Action",
+        "createTask": "Create Task",
+        "selectField": "Choose field for task",
+        "confirm": "Confirm",
+        "generatingDescription": "Generating task description...",
+        "yes": "Yes",
+        "no": "No",
+        "healthy": "Healthy",
+        "unhealthy": "Unhealthy"
+    },
+    "farmMembers": {
+        "title": "Farm Members",
+        "inviteByEmail": "Invite by Email",
+        "name": "Name",
+        "email": "Email",
+        "role": "Role",
+        "remove": "Remove",
+        "selectRole": "Select Role",
+        "unknownRole": "Unknown Role",
+        "confirmDeletion": "Confirm Deletion",
+        "confirmDeleteBody": "Are you sure you want to remove this member?",
+        "delete": "Delete",
+        "fetchMembersError": "Failed to load members.",
+        "fetchRolesError": "Failed to load roles.",
+        "updateRoleSuccess": "Role updated successfully!",
+        "updateRoleError": "Failed to update role.",
+        "removeSuccess": "Member removed!",
+        "removeError": "Failed to remove member.",
+        "noPermission": "You do not have permission to view farm members."
+    },
+    "equipmentReport": {
+        "title": "Equipment Usage Report",
+        "fetchTaskTypesError": "Failed to load task types.",
+        "fetchSeasonsError": "Failed to load seasons.",
+        "fetchUsageError": "Failed to load equipment usage report.",
+        "taskOverview": "Task Overview",
+        "fuelUsage": "Fuel Usage",
+        "timeWorked": "Time Worked",
+        "areaCovered": "Area Covered",
+        "noCompletedTasks": "No completed tasks assigned to this equipment.",
+        "totalTasksCompleted": "Total Tasks Completed:",
+        "taskTypeBreakdown": "Task Type Breakdown (%)",
+        "noFuelUsage": "No fuel usage data",
+        "totalFuelUsed": "Total Fuel Used:",
+        "fuelUsagePerTaskType": "Fuel Usage per Task Type",
+        "noTimeUsage": "No time usage data",
+        "totalTimeWorked": "Total Time Worked:",
+        "timeSpentPerTaskType": "Time Spent per Task Type",
+        "noAreaData": "No area data recorded",
+        "totalAreaCovered": "Total Area Covered:",
+        "areaPerTaskType": "Area Covered per Task Type",
+        "fuelUsedLabel": "Fuel Used (L)",
+        "minutesWorkedLabel": "Minutes Worked",
+        "areaCoveredLabel": "Area Covered (ha)"
+    },
+    "activityReport": {
+        "title": "Farm Members Activity Report",
+        "fetchSeasonsError": "Failed to load seasons.",
+        "fetchActivityError": "Failed to load activity report.",
+        "noActivityData": "No activity data found for this season.",
+        "role": "Role:",
+        "tasksParticipated": "Tasks Participated:",
+        "totalMinutesWorked": "Total Minutes Worked:",
+        "tasks": "Tasks:"
+    },
+    "tasksReport": {
+        "title": "Task Report",
+        "fetchSeasonsError": "Failed to load seasons.",
+        "fetchReportError": "Failed to fetch task report.",
+        "overview": "Task Overview",
+        "totalTasks": "Total Tasks:",
+        "completed": "Completed:",
+        "pending": "Pending:",
+        "canceled": "Canceled:",
+        "avgCompletionTime": "Avg. Completion Time:",
+        "tasksByField": "Tasks by Field",
+        "tasksByType": "Tasks by Type",
+        "noTaskData": "No task data available for this season.",
+        "noTaskTypeData": "No task type data available for this season.",
+        "noData": "No data available for selected season.",
+        "tasksByTypeLabel": "Tasks by Type"
+    },
+    "mapDraw": {
+        "cancelDrawing": "Cancel Drawing",
+        "resetView": "Reset View",
+        "finishDrawing": "Finish Drawing",
+        "currentMeasurement": "Current Measurement",
+        "area": "Area",
+        "perimeter": "Perimeter"
+    },
+    "invitationForm": {
+        "dialogTitle": "Invite Member",
+        "cancel": "Cancel",
+        "sendInvite": "Send Invitation",
+        "sending": "Sending...",
+        "email": "Email",
+        "emailPlaceholder": "Enter email address",
+        "emailRequired": "Email is required",
+        "emailInvalid": "Email is invalid",
+        "role": "Role",
+        "selectRole": "Select a role",
+        "roleRequired": "Role is required",
+        "infoText": "An invitation will be sent to this email. The user will need to create an account or log in to accept.",
+        "inviteSuccess": "Invitation sent successfully!",
+        "alreadyMemberError": "This user is already a member of this farm",
+        "inviteError": "Failed to send invitation",
+        "fetchRolesError": "Failed to load roles"
+    },
+    "errors": {
+        "sessionExpired": "Session expired. Please log in again.",
+        "permissionDenied": "You do not have permission to do this.",
+        "networkError": "Network error. Please check your connection.",
+        "serverError": "Server error. Please try again later.",
+        "unknownError": "An unknown error occurred.",
+        "unauthorized": "Unauthorized access.",
+        "missingAuth": "Missing authentication or farm selection.",
+        "failedToLoad": "Failed to load data."
+      },
+      "success": {
+        "dataLoaded": "Data loaded successfully.",
+        "actionCompleted": "Action completed successfully."
+    },
+    "accessDenied": {
+        "title": "Access Denied",
+        "subtitle": "You do not have the necessary permissions.",
+        "goToDashboard": "Go to Dashboard"
+    },
+    "errorPage": {
+        "title": "Error Occurred",
+        "subtitle": "Something went wrong.",
+        "goToDashboard": "Go to Dashboard"
+    },
+    "notFound": {
+        "title": "Not Found",
+        "description": "Requested resource is not available",
+        "faqTitle": "Frequently Asked Questions",
+        "faqSubtitle": "Ultricies mi quis hendrerit dolor.",
+        "solutionTitle": "Solution Center",
+        "solutionSubtitle": "Phasellus faucibus scelerisque eleifend.",
+        "permissionsTitle": "Permission Manager",
+        "permissionsSubtitle": "Accumsan in nisl nisi scelerisque"
+    },
+    "login": {
+        "welcomeBack": "Welcome Back",
+        "signInToContinue": "Sign in to continue",
+        "username": "Username",
+        "password": "Password",
+        "enterUsername": "Enter your username",
+        "enterPassword": "Enter your password",
+        "rememberMe": "Remember me",
+        "forgotPassword": "Forgot password?",
+        "signIn": "Sign In",
+        "signingIn": "Signing In...",
+        "emptyFields": "There are empty fields",
+        "incorrectCredentials": "Incorrect credentials",
+        "errorOccurred": "An error has occurred: {message}",
+        "processingInvitation": "Processing your invitation...",
+        "pendingInvitation": "You have a pending invitation to join {farmName}",
+        "noFarm": "You have no farm yet, please create one",
+        "welcomeFarm": "Welcome to {farmName}",
+        "loginFailed": "Failed to log in.",
+        "selectFarm": "Select a Farm",
+        "multipleFarms": "You have access to multiple farms",
+        "chooseFarm": "Choose Farm",
+        "selectFarmPlaceholder": "-- Select Farm --",
+        "confirmFarm": "Confirm Farm",
+        "selectFarmError": "Please select a farm.",
+        "farmSelected": "Farm selected successfully!"
+    },
+    "auth": {
+        "createAccount": "Create an Account",
+        "signUpToStart": "Sign up to get started",
+        "name": "Name",
+        "enterName": "Enter your name",
+        "email": "Email",
+        "enterEmail": "Enter your email",
+        "password": "Password",
+        "enterPassword": "Enter your password",
+        "repeatPassword": "Repeat Password",
+        "confirmPassword": "Confirm your password",
+        "uploadProfileImage": "Upload Profile Image",
+        "selectImage": "Select Image",
+        "agreeTerms": "I agree to the terms & conditions",
+        "signUp": "Sign Up",
+        "creatingAccount": "Creating Account...",
+        "emptyFields": "There are empty fields",
+        "invalidEmail": "Invalid email address is provided",
+        "passwordTooShort": "Password must be at least 5 characters",
+        "passwordsDoNotMatch": "Passwords do not match",
+        "profileImageSelected": "Profile image selected successfully!",
+        "registrationSuccess": "Successful registration",
+        "loginToAcceptInvitation": "Please log in to accept your invitation",
+        "emailTaken": "Email is already taken",
+        "usernameTaken": "Username is already taken",
+        "errorOccurred": "An error occurred"
+    },
+    "farm": {
+        "createFarmTitle": "Create Your Farm",
+        "startByNaming": "Start by giving your farm a name",
+        "farmName": "Farm Name",
+        "enterFarmName": "Enter your farm name",
+        "createFarmButton": "Create Farm",
+        "creating": "Creating...",
+        "emptyFarmName": "Please enter a farm name",
+        "farmCreated": "Farm created successfully!",
+        "farmCreationFailed": "Failed to create farm"
+    },
+    "invitation": {
+        "farmInvitation": "Farm Invitation",
+        "invitationError": "Invitation Error",
+        "alreadyMember": "Already a Member",
+        "alreadyMemberOf": "You are already a member of the farm:",
+        "invited": "You've been invited!",
+        "invitedToFarm": "You have been invited to join the farm:",
+        "registerWithEmail": "You need an account with email {email} to join this farm.",
+        "createAccount": "Create Account",
+        "login": "Log In",
+        "backToLogin": "Back to Login",
+        "goToDashboard": "Go to Dashboard",
+        "acceptInvitation": "Accept Invitation",
+        "processing": "Processing...",
+        "alreadyMemberOfFarm": "You are already a member of {farmName}",
+        "joinedFarm": "You have successfully joined {farmName}!",
+        "acceptFailed": "Failed to accept invitation.",
+        "invalidOrExpired": "This invitation is invalid or has expired.",
+        "pleaseLoginOrRegister": "Please register or log in to accept this invitation."
+    },
+    "menu": {
+        "home": "Home",
+        "dashboard": "Dashboard",
+        "cropHealth": "Crop Health",
+        "map": "Map",
+        "fields": "Fields",
+        "tasks": "Tasks",
+        "equipment": "Equipment",
+        "farmMembers": "Farm Members",
+        "configuration": "Configuration",
+        "rolesPermissions": "Roles & Permissions",
+        "reports": "Reports",
+        "taskSummary": "Task Summary",
+        "equipmentUsage": "Equipment Usage",
+        "farmMembersActivity": "Farm Members Activity"
+    },
+    "topbar": {
+    "menu": {
+      "profile": "Profile",
+      "settings": "Settings",
+      "switchFarm": "Switch Farm",
+      "noOtherFarms": "No other farms available",
+      "manageFarms": "Manage Farms",
+      "logout": "Logout"
+    },
+    "labels": {
+      "owner": "Owner",
+      "member": "Member"
+    },
+    "manageFarms": {
+      "title": "Manage Farms",
+      "selectFarm": "Select a farm",
+      "members": "Members",
+      "fields": "Fields",
+      "equipments": "Equipments",
+      "tasks": "Tasks"
+    },
+    "renameFarm": {
+      "title": "Rename Farm",
+      "placeholder": "New farm name"
+    },
+    "deleteFarm": {
+      "title": "Delete Farm",
+      "confirmMessage": "Are you sure you want to delete this farm? This action cannot be undone."
+    },
+    "createFarm": {
+      "title": "Create New Farm",
+      "placeholder": "Farm Name"
+    },
+    "leaveFarm": {
+      "title": "Leave Farm",
+      "confirmMessage": "Are you sure you want to leave this farm?"
+    },
+    "buttons": {
+      "inviteMember": "Invite Member",
+      "renameFarm": "Rename Farm",
+      "deleteFarm": "Delete Farm",
+      "leaveFarm": "Leave Farm",
+      "createNewFarm": "Create New Farm",
+      "save": "Save",
+      "cancel": "Cancel",
+      "delete": "Delete",
+      "create": "Create",
+      "leave": "Leave"
+    },
+    "success": {
+      "farmSwitched": "Farm switched successfully!",
+      "loggedOut": "Logged out successfully",
+      "farmRenamed": "Farm renamed!",
+      "farmDeleted": "Farm deleted!",
+      "farmCreated": "New farm created!",
+      "leftFarm": "You left the farm!"
+    },
+    "errors": {
+      "loadFarmDetails": "Failed to load farm details",
+      "renameFarm": "Failed to rename farm",
+      "deleteFarm": "Failed to delete farm",
+      "createFarm": "Failed to create farm",
+      "leaveFarm": "Failed to leave farm"
     }
   }
+}
