--- a/new-frontend/translations/lt.json
+++ b/new-frontend/translations/lt.json
@@ -1,22 +1,443 @@
 {
     "common": {
-      "field": "Laukas"
+        "field": "Laukas",
+        "save": "Išsaugoti",
+        "cancel": "Atšaukti",
+        "create": "Sukurti",
+        "name": "Pavadinimas",
+        "description": "Aprašymas",
+        "optional": "neprivaloma"
     },
     "dashboard": {
-      "aiSummary": "AI Santrauka",
-      "generatingSummary": "Generuojama santrauka...",
-      "noSummaryAvailable": "Santrauka nepasiekiama.",
-      "regenerateInsight": "Atnaujinti įžvalgą",
-      "taskCompletion": "Užduočių Atlikimas",
-      "completed": "Atlikta",
-      "notDone": "Neatlikta",
-      "totalFieldArea": "Bendras Laukų Plotas",
-      "tasksTimeline": "Užduočių laiko juosta",
-      "task": "Užduotis",
-      "status": "Būsena",
-      "date": "Data",
-      "due": "Terminas",
-      "completed": "Atlikta",
-      "view": "Peržiūrėti"
+        "aiSummary": "AI Santrauka",
+        "generatingSummary": "Generuojama santrauka...",
+        "noSummaryAvailable": "Santrauka nepasiekiama.",
+        "regenerateInsight": "Atnaujinti įžvalgą",
+        "taskCompletion": "Užduočių Atlikimas",
+        "completed": "Atlikta",
+        "notDone": "Neatlikta",
+        "totalFieldArea": "Bendras Laukų Plotas",
+        "tasksTimeline": "Užduočių laiko juosta",
+        "task": "Užduotis",
+        "status": "Būsena",
+        "date": "Data",
+        "due": "Terminas",
+        "view": "Peržiūrėti"
+    },
+    "roles": {
+        "title": "Rolės ir Leidimai",
+        "selectRole": "Pasirinkite rolę",
+        "noOtherRolesAvailable": "Nėra kitų rolių",
+        "permissionsForRole": "Leidimai rolei",
+        "owner": "Savininkas",
+        "member": "Narys",
+        "updateRole": "Išsaugoti Rolę",
+        "noPermission": "Jūs neturite teisės peržiūrėti rolių ir leidimų."
+    },
+    "equipment": {
+        "title": "Sukurti Įrangą",
+        "equipmentName": "Įrangos pavadinimas",
+        "enterEquipmentName": "Įveskite įrangos pavadinimą",
+        "selectEquipmentType": "Pasirinkite įrangos tipą",
+        "selectType": "Pasirinkite įrangos tipą",
+        "description": "Aprašymas",
+        "enterDescription": "Įveskite įrangos aprašymą",
+        "createButton": "Sukurti Įrangą",
+        "noPermission": "Neturite leidimo sukurti įrangą šiame ūkyje.",
+
+        "myEquipment": "Mano įranga",
+        "searchPlaceholder": "Ieškoti pagal pavadinimą...",
+        "filterByType": "Filtruoti pagal tipą",
+        "createEquipment": "Sukurti įrangą",
+        "type": "Tipas",
+        "actions": "Veiksmai",
+        "confirmDelete": "Patvirtinti ištrynimą",
+        "delete": "Ištrinti",
+        "deleteConfirmation": "Ar tikrai norite ištrinti ",
+        "showAll": "Rodyti viską",
+        "fetchError": "Nepavyko gauti įrangos duomenų.",
+        "fetchTypesError": "Nepavyko gauti įrangos tipų.",
+        "updateSuccess": "Įranga sėkmingai atnaujinta.",
+        "updateError": "Nepavyko atnaujinti įrangos.",
+        "deleteSuccess": "Ištrinta įranga: {name}",
+        "deleteError": "Nepavyko ištrinti įrangos.",
+        "unknown": "Nežinomas",
+        "noPermissionView": "Neturite leidimo peržiūrėti įrangą."
+    },
+    "fields": {
+        "title": "Sukurti Lauką",
+        "fieldName": "Lauko Pavadinimas",
+        "enterFieldName": "Įveskite lauko pavadinimą",
+        "selectCrop": "Pasirinkite Pasėlį",
+        "selectCropType": "Pasirinkite pasėlį",
+        "drawBoundary": "Nubrėžkite Lauko Ribas",
+        "area": "Plotas",
+        "perimeter": "Perimetras",
+        "createButton": "Sukurti Lauką",
+        "noPermission": "Jūs neturite teisės kurti laukus.",
+        "ha": "ha",
+        "m": "m",
+        "fieldLoadError": "Nepavyko įkelti lauko duomenų.",
+        "fieldNotFound": "Laukas nerastas.",
+        "fieldLocation": "Lauko vieta",
+        "deleteField": "Ištrinti lauką",
+        "deleteFieldConfirm": "Ar tikrai norite ištrinti šį lauką?",
+        "deleteFieldSuccess": "Laukas sėkmingai ištrintas.",
+        "deleteFieldError": "Nepavyko ištrinti lauko.",
+        "myFields": "Mano Laukai",
+        "searchPlaceholder": "Ieškoti laukų pagal pavadinimą",
+        "fetchFieldsError": "Nepavyko gauti laukų duomenų.",
+        "moreInfo": "Daugiau informacijos"
+    },
+    "tasks": {
+        "title": "Sukurti Užduotį",
+        "taskType": "Užduoties Tipas",
+        "selectTaskType": "Pasirinkite Užduoties Tipą",
+        "description": "Aprašymas",
+        "taskStatus": "Užduoties Būsena",
+        "selectTaskStatus": "Pasirinkite Užduoties Būseną",
+        "field": "Laukas",
+        "selectField": "Pasirinkite Lauką",
+        "season": "Sezonas",
+        "allSeasons": "Visi sezonai",
+        "date": "Data",
+        "dueDate": "Termino Data",
+        "completedDate": "Atlikimo Data",
+        "selectEquipment": "Pasirinkite Įrangą",
+        "recommendedDate": "Rekomenduojama data šiai užduočiai",
+        "useRecommendedDate": "Naudoti rekomenduojamą datą",
+        "createTask": "Sukurti Užduotį",
+        "noPermission": "Jūs neturite teisės kurti užduotis.",
+        "startRecording": "Pradėti įrašymą",
+        "stopRecording": "Stabdyti įrašymą",
+        "processingVoice": "Apdorojamas balso įrašas...",
+        "noTasksAvailable": "Nėra užduočių.",
+        "fetchTasksError": "Nepavyko gauti užduočių.",
+        "fetchSeasonsError": "Nepavyko įkelti sezonų.",
+        "viewTask": "Peržiūrėti užduotį",
+        "taskStatusPending": "Suplanuotos",
+        "taskStatusCompleted": "Atliktos",
+        "taskStatusCanceled": "Atšauktos",
+        "all": "Visos"
+    },
+    "cropHealth": {
+        "title": "Pasėlių Sveikatos Diagnozė (AI)",
+        "subtitle": "Įkelkite augalo ar pasėlio nuotrauką ir gaukite dirbtinio intelekto pasiūlytą diagnozę.",
+        "chooseCropImage": "Pasirinkite Pasėlio Nuotrauką",
+        "analyze": "Analizuoti",
+        "diagnosisReport": "Diagnozės Ataskaita",
+        "plantDetected": "Augalas Aptiktas",
+        "healthStatus": "Sveikatos Būklė",
+        "detectedDiseases": "Aptiktos Ligos",
+        "disease": "Liga",
+        "probability": "Tikimybė",
+        "similarImages": "Panašūs Vaizdai",
+        "action": "Veiksmas",
+        "createTask": "Sukurti Užduotį",
+        "selectField": "Pasirinkite lauką užduočiai",
+        "confirm": "Patvirtinti",
+        "generatingDescription": "Generuojamas užduoties aprašymas...",
+        "yes": "Taip",
+        "no": "Ne",
+        "healthy": "Sveikas",
+        "unhealthy": "Nesveikas"
+    },
+    "farmMembers": {
+        "title": "Ūkio nariai",
+        "inviteByEmail": "Pakviesti el. paštu",
+        "name": "Vardas",
+        "email": "El. paštas",
+        "role": "Vaidmuo",
+        "remove": "Pašalinti",
+        "selectRole": "Pasirinkti vaidmenį",
+        "unknownRole": "Nežinomas vaidmuo",
+        "confirmDeletion": "Patvirtinti šalinimą",
+        "confirmDeleteBody": "Ar tikrai norite pašalinti šį narį?",
+        "delete": "Ištrinti",
+        "fetchMembersError": "Nepavyko įkelti narių.",
+        "fetchRolesError": "Nepavyko įkelti vaidmenų.",
+        "updateRoleSuccess": "Vaidmuo sėkmingai atnaujintas!",
+        "updateRoleError": "Nepavyko atnaujinti vaidmens.",
+        "removeSuccess": "Narys pašalintas!",
+        "removeError": "Nepavyko pašalinti nario.",
+        "noPermission": "Neturite leidimo peržiūrėti ūkio narius."
+    },
+    "equipmentReport": {
+        "title": "Įrangos naudojimo ataskaita",
+        "fetchTaskTypesError": "Nepavyko įkelti užduočių tipų.",
+        "fetchSeasonsError": "Nepavyko įkelti sezonų.",
+        "fetchUsageError": "Nepavyko įkelti įrangos naudojimo ataskaitos.",
+        "taskOverview": "Užduočių apžvalga",
+        "fuelUsage": "Degalų naudojimas",
+        "timeWorked": "Darbo laikas",
+        "areaCovered": "Padengtas plotas",
+        "noCompletedTasks": "Šiai įrangai nepriskirtų užbaigtų užduočių.",
+        "totalTasksCompleted": "Iš viso atlikta užduočių:",
+        "taskTypeBreakdown": "Užduočių tipų pasiskirstymas (%)",
+        "noFuelUsage": "Nėra duomenų apie degalų naudojimą",
+        "totalFuelUsed": "Iš viso sunaudota degalų:",
+        "fuelUsagePerTaskType": "Degalų naudojimas pagal užduočių tipus",
+        "noTimeUsage": "Nėra duomenų apie darbo laiką",
+        "totalTimeWorked": "Iš viso dirbta laiko:",
+        "timeSpentPerTaskType": "Laikas pagal užduočių tipus",
+        "noAreaData": "Nėra įrašytų ploto duomenų",
+        "totalAreaCovered": "Iš viso padengtas plotas:",
+        "areaPerTaskType": "Padengtas plotas pagal užduočių tipus",
+        "fuelUsedLabel": "Sunaudoti degalai (litrai)",
+        "minutesWorkedLabel": "Dirbtos minutės",
+        "areaCoveredLabel": "Padengtas plotas (ha)"
+    },
+    "activityReport": {
+        "title": "Ūkio narių veiklos ataskaita",
+        "fetchSeasonsError": "Nepavyko įkelti sezonų.",
+        "fetchActivityError": "Nepavyko įkelti veiklos ataskaitos.",
+        "noActivityData": "Šiam sezonui nerasta veiklos duomenų.",
+        "role": "Vaidmuo:",
+        "tasksParticipated": "Dalyvauta užduotyse:",
+        "totalMinutesWorked": "Iš viso dirbta minučių:",
+        "tasks": "Užduotys:"
+    },
+    "tasksReport": {
+        "title": "Užduočių ataskaita",
+        "fetchSeasonsError": "Nepavyko įkelti sezonų.",
+        "fetchReportError": "Nepavyko įkelti užduočių ataskaitos.",
+        "overview": "Užduočių apžvalga",
+        "totalTasks": "Iš viso užduočių:",
+        "completed": "Atlikta:",
+        "pending": "Laukiančios:",
+        "canceled": "Atšauktos:",
+        "avgCompletionTime": "Vidutinis atlikimo laikas:",
+        "tasksByField": "Užduotys pagal lauką",
+        "tasksByType": "Užduotys pagal tipą",
+        "noTaskData": "Šiam sezonui nėra užduočių duomenų.",
+        "noTaskTypeData": "Šiam sezonui nėra užduočių tipų duomenų.",
+        "noData": "Pasirinktam sezonui duomenų nėra.",
+        "tasksByTypeLabel": "Užduotys pagal tipą"
+    },
+    "mapDraw": {
+        "cancelDrawing": "Atšaukti braižymą",
+        "resetView": "Atstatyti vaizdą",
+        "finishDrawing": "Užbaigti braižymą",
+        "currentMeasurement": "Dabartinis matavimas",
+        "area": "Plotas",
+        "perimeter": "Perimetras"
+    },
+    "invitationForm": {
+        "dialogTitle": "Pakviesti narį",
+        "cancel": "Atšaukti",
+        "sendInvite": "Siųsti kvietimą",
+        "sending": "Siunčiama...",
+        "email": "El. paštas",
+        "emailPlaceholder": "Įveskite el. pašto adresą",
+        "emailRequired": "El. paštas yra privalomas",
+        "emailInvalid": "Neteisingas el. pašto formatas",
+        "role": "Vaidmuo",
+        "selectRole": "Pasirinkite vaidmenį",
+        "roleRequired": "Vaidmuo yra privalomas",
+        "infoText": "Į šį el. pašto adresą bus išsiųstas kvietimas. Vartotojas turės susikurti paskyrą arba prisijungti, kad patvirtintų kvietimą.",
+        "inviteSuccess": "Kvietimas sėkmingai išsiųstas!",
+        "alreadyMemberError": "Šis vartotojas jau yra šio ūkio narys",
+        "inviteError": "Nepavyko išsiųsti kvietimo",
+        "fetchRolesError": "Nepavyko įkelti vaidmenų"
+    },
+    "errors": {
+        "sessionExpired": "Sesija baigėsi. Prašome prisijungti iš naujo.",
+        "permissionDenied": "Jūs neturite teisės atlikti šį veiksmą.",
+        "networkError": "Tinklo klaida. Patikrinkite savo ryšį.",
+        "serverError": "Serverio klaida. Prašome bandyti vėliau.",
+        "unknownError": "Įvyko nežinoma klaida.",
+        "unauthorized": "Neautorizuota prieiga.",
+        "missingAuth": "Trūksta autentifikacijos arba ūkio pasirinkimo.",
+        "failedToLoad": "Nepavyko įkelti duomenų."
+      },
+    "success": {
+        "dataLoaded": "Duomenys sėkmingai įkelti.",
+        "actionCompleted": "Veiksmas sėkmingai atliktas."
+    },
+    "accessDenied": {
+        "title": "Prieiga uždrausta",
+        "subtitle": "Jūs neturite reikiamų leidimų.",
+        "goToDashboard": "Eiti į prietaisų skydelį"
+    },
+    "errorPage": {
+        "title": "Įvyko klaida",
+        "subtitle": "Kažkas nutiko ne taip.",
+        "goToDashboard": "Eiti į prietaisų skydelį"
+    },
+    "notFound": {
+        "title": "Puslapis nerastas",
+        "description": "Prašomas resursas negalimas",
+        "faqTitle": "Dažniausiai užduodami klausimai",
+        "faqSubtitle": "Ultricies mi quis hendrerit dolor.",
+        "solutionTitle": "Sprendimų centras",
+        "solutionSubtitle": "Phasellus faucibus scelerisque eleifend.",
+        "permissionsTitle": "Leidimų valdymas",
+        "permissionsSubtitle": "Accumsan in nisl nisi scelerisque"
+    },
+    "login": {
+        "welcomeBack": "Sveiki sugrįžę",
+        "signInToContinue": "Prisijunkite, kad tęstumėte",
+        "username": "Vartotojo vardas",
+        "password": "Slaptažodis",
+        "enterUsername": "Įveskite vartotojo vardą",
+        "enterPassword": "Įveskite slaptažodį",
+        "rememberMe": "Prisiminti mane",
+        "forgotPassword": "Pamiršote slaptažodį?",
+        "signIn": "Prisijungti",
+        "signingIn": "Jungiamasi...",
+        "emptyFields": "Yra tuščių laukų",
+        "incorrectCredentials": "Neteisingi prisijungimo duomenys",
+        "errorOccurred": "Įvyko klaida: {message}",
+        "processingInvitation": "Apdorojama jūsų kvietimas...",
+        "pendingInvitation": "Turite kvietimą prisijungti prie {farmName}",
+        "noFarm": "Neturite nė vieno ūkio. Sukurkite naują.",
+        "welcomeFarm": "Sveiki atvykę į {farmName}",
+        "loginFailed": "Nepavyko prisijungti.",
+        "selectFarm": "Pasirinkite ūkį",
+        "multipleFarms": "Turite prieigą prie kelių ūkių",
+        "chooseFarm": "Pasirinkite ūkį",
+        "selectFarmPlaceholder": "-- Pasirinkite ūkį --",
+        "confirmFarm": "Patvirtinti ūkį",
+        "selectFarmError": "Pasirinkite ūkį.",
+        "farmSelected": "Ūkis sėkmingai pasirinktas!"
+    },
+    "auth": {
+        "createAccount": "Sukurti paskyrą",
+        "signUpToStart": "Prisiregistruokite ir pradėkite",
+        "name": "Vardas",
+        "enterName": "Įveskite savo vardą",
+        "email": "El. paštas",
+        "enterEmail": "Įveskite savo el. paštą",
+        "password": "Slaptažodis",
+        "enterPassword": "Įveskite savo slaptažodį",
+        "repeatPassword": "Pakartokite slaptažodį",
+        "confirmPassword": "Patvirtinkite slaptažodį",
+        "uploadProfileImage": "Įkelkite profilio nuotrauką",
+        "selectImage": "Pasirinkite nuotrauką",
+        "agreeTerms": "Sutinku su sąlygomis",
+        "signUp": "Registruotis",
+        "creatingAccount": "Kuriama paskyra...",
+        "emptyFields": "Yra tuščių laukų",
+        "invalidEmail": "Neteisingas el. pašto adresas",
+        "passwordTooShort": "Slaptažodis turi būti bent 5 simbolių",
+        "passwordsDoNotMatch": "Slaptažodžiai nesutampa",
+        "profileImageSelected": "Profilių nuotrauka pasirinkta!",
+        "registrationSuccess": "Registracija sėkminga",
+        "loginToAcceptInvitation": "Prisijunkite, kad priimtumėte kvietimą",
+        "emailTaken": "El. paštas jau užimtas",
+        "usernameTaken": "Vartotojo vardas jau užimtas",
+        "errorOccurred": "Įvyko klaida"
+    },
+    "farm": {
+        "createFarmTitle": "Sukurkite Savo Ūkį",
+        "startByNaming": "Pradėkite suteikdami ūkiui pavadinimą",
+        "farmName": "Ūkio Pavadinimas",
+        "enterFarmName": "Įveskite savo ūkio pavadinimą",
+        "createFarmButton": "Sukurti Ūkį",
+        "creating": "Kuriama...",
+        "emptyFarmName": "Įveskite ūkio pavadinimą",
+        "farmCreated": "Ūkis sėkmingai sukurtas!",
+        "farmCreationFailed": "Nepavyko sukurti ūkio"
+    },
+    "invitation": {
+        "farmInvitation": "Ūkio kvietimas",
+        "invitationError": "Kvietimo klaida",
+        "alreadyMember": "Jau esate narys",
+        "alreadyMemberOf": "Jūs jau esate šio ūkio narys:",
+        "invited": "Jūs buvote pakviestas!",
+        "invitedToFarm": "Jūs buvote pakviestas prisijungti prie ūkio:",
+        "registerWithEmail": "Turite turėti paskyrą su el. paštu {email}, kad galėtumėte prisijungti prie šio ūkio.",
+        "createAccount": "Sukurti paskyrą",
+        "login": "Prisijungti",
+        "backToLogin": "Grįžti į prisijungimą",
+        "goToDashboard": "Į prietaisų skydelį",
+        "acceptInvitation": "Priimti kvietimą",
+        "processing": "Apdorojama...",
+        "alreadyMemberOfFarm": "Jūs jau esate narys ūkyje {farmName}",
+        "joinedFarm": "Sėkmingai prisijungėte prie {farmName}!",
+        "acceptFailed": "Nepavyko priimti kvietimo.",
+        "invalidOrExpired": "Šis kvietimas negalioja arba yra pasibaigęs.",
+        "pleaseLoginOrRegister": "Prašome prisijungti arba užsiregistruoti, kad priimtumėte kvietimą."
+    },
+    "menu": {
+        "home": "Pradžia",
+        "dashboard": "Valdymo skydelis",
+        "cropHealth": "Pasėlių sveikata",
+        "map": "Žemėlapis",
+        "fields": "Laukai",
+        "tasks": "Užduotys",
+        "equipment": "Įranga",
+        "farmMembers": "Ūkio nariai",
+        "configuration": "Konfigūracija",
+        "rolesPermissions": "Rolės ir leidimai",
+        "reports": "Ataskaitos",
+        "taskSummary": "Užduočių santrauka",
+        "equipmentUsage": "Įrangos naudojimas",
+        "farmMembersActivity": "Ūkio narių veikla"
+    },
+    "topbar": {
+        "menu": {
+          "profile": "Profilis",
+          "settings": "Nustatymai",
+          "switchFarm": "Perjungti ūkį",
+          "noOtherFarms": "Nėra kitų ūkių",
+          "manageFarms": "Valdyti ūkius",
+          "logout": "Atsijungti"
+        },
+        "labels": {
+          "owner": "Savininkas",
+          "member": "Narys"
+        },
+        "manageFarms": {
+          "title": "Valdyti ūkius",
+          "selectFarm": "Pasirinkite ūkį",
+          "members": "Nariai",
+          "fields": "Laukai",
+          "equipments": "Įranga",
+          "tasks": "Užduotys"
+        },
+        "renameFarm": {
+          "title": "Pervadinti ūkį",
+          "placeholder": "Naujas ūkio pavadinimas"
+        },
+        "deleteFarm": {
+          "title": "Ištrinti ūkį",
+          "confirmMessage": "Ar tikrai norite ištrinti šį ūkį? Šio veiksmo negalima bus atšaukti."
+        },
+        "createFarm": {
+          "title": "Sukurti naują ūkį",
+          "placeholder": "Ūkio pavadinimas"
+        },
+        "leaveFarm": {
+          "title": "Palikti ūkį",
+          "confirmMessage": "Ar tikrai norite palikti šį ūkį?"
+        },
+        "buttons": {
+          "inviteMember": "Pakviesti narį",
+          "renameFarm": "Pervadinti ūkį",
+          "deleteFarm": "Ištrinti ūkį",
+          "leaveFarm": "Palikti ūkį",
+          "createNewFarm": "Sukurti naują ūkį",
+          "save": "Išsaugoti",
+          "cancel": "Atšaukti",
+          "delete": "Ištrinti",
+          "create": "Sukurti",
+          "leave": "Palikti"
+        },
+        "success": {
+          "farmSwitched": "Ūkis sėkmingai perjungtas!",
+          "loggedOut": "Sėkmingai atsijungta",
+          "farmRenamed": "Ūkis pervadintas!",
+          "farmDeleted": "Ūkis ištrintas!",
+          "farmCreated": "Naujas ūkis sukurtas!",
+          "leftFarm": "Jūs palikote ūkį!"
+        },
+        "errors": {
+          "loadFarmDetails": "Nepavyko įkelti ūkio duomenų",
+          "renameFarm": "Nepavyko pervadinti ūkio",
+          "deleteFarm": "Nepavyko ištrinti ūkio",
+          "createFarm": "Nepavyko sukurti ūkio",
+          "leaveFarm": "Nepavyko palikti ūkio"
+        }
     }
-  }
+}
